@@ -1,13 +1,0 @@
-LIBRARY VPR
-
-EXPORTS
-   ?exists@filesystem@boost@@YA_NABVpath@12@@Z
-   ??0path@filesystem@boost@@QAE@ABV?$basic_string@DU?$char_traits@D@std@@V?$allocator@D@2@@std@@@Z
-   ?native_file_string@path@filesystem@boost@@QBE?AV?$basic_string@DU?$char_traits@D@std@@V?$allocator@D@2@@std@@XZ
-   ?leaf@path@filesystem@boost@@QBE?AV?$basic_string@DU?$char_traits@D@std@@V?$allocator@D@2@@std@@XZ
-   ??0directory_iterator@filesystem@boost@@QAE@ABVpath@12@@Z
-   ??0directory_iterator@filesystem@boost@@QAE@XZ
-   ?is_directory@filesystem@boost@@YA_NABVpath@12@@Z
-   ?m_deref@directory_iterator@filesystem@boost@@ABEABVpath@23@XZ
-   ?m_inc@directory_iterator@filesystem@boost@@AAEXXZ
-   ??0path@filesystem@boost@@QAE@ABV?$basic_string@DU?$char_traits@D@std@@V?$allocator@D@2@@std@@W4path_format@12@@Z
